# irssi-otr

./: .gitignore  README.md  bootstrap  configure.ac
config/: attributes.m4
src/: Makefile.am  cmd.c  irssi-otr.h  module.c  utils.c
